data extracted successfully

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-langchain_openai
-langchain_core
-python-dotenv
-streamlit
-langchain_community
-langserve
-fastapi
-uvicorn
-sse_starlette   #pip install
+pandas 
+mlflow==2.2.2
+notebook
+numpy
+scikit-learn
+matplotlib
+python-box==6.0.2
+pyYAML
+tqdm
+ensure==1.0.2
+joblib
+types-PyYAML
+Flask
+Flask-Cors
